--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -47,7 +47,7 @@
   <tr>
     <td class="cellInspectionNumber">E10</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check torque of stabilizer eye-bolts.  Torque of AN47 eyebolts is 600 in-lbs.  Torque for 9/16” diameter p/n 30775-1 eye-bolts is 100 ft-lbs.</td>
+    <td class="cellInspectionText">Check torque of stabilizer eye-bolts.  Torque of AN47 eyebolts is 600 in-lbs.  Torque for 9/16" diameter p/n 30775-1 eye-bolts is 100 ft-lbs.</td>
   </tr>
     <tr>
     <td class="cellInspectionNumber">E11</td>
