--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -68,6 +68,6 @@
   <tr>
     <td class="cellInspectionNumber">EM13</td>
     <td class="cellInspectionInterval">(---)</td>
-    <td class="cellInspectionText">Conduct all other inspections according to “Pratt and Whitney Engine Maintenance Manual” at the recommended interval.</td>
+    <td class="cellInspectionText">Conduct all other inspections according to “Pratt and Whitney Engine Maintenance Manual" at the recommended interval.</td>
   </tr>
 </table>
