--- a/html/Inspection/Insp_FUEL SYSTEM.html
+++ b/html/Inspection/Insp_FUEL SYSTEM.html
@@ -27,7 +27,7 @@
     <tr>
     <td class="cellInspectionNumber">FS6</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check operation of the fuel filter warning system by removing the hose and attaching a gauged vacuum source to the bottom of the vacuum switch.  Apply decreasing pressure gradually (vacuum).  The battery switch should be “ON”, and someone in the cockpit to tell when the “FUEL FILTER” warning light goes on.  This should occur at 80 (+/- 1) inches of water (vacuum).</td>
+    <td class="cellInspectionText">Check operation of the fuel filter warning system by removing the hose and attaching a gauged vacuum source to the bottom of the vacuum switch.  Apply decreasing pressure gradually (vacuum).  The battery switch should be “ON", and someone in the cockpit to tell when the “FUEL FILTER" warning light goes on.  This should occur at 80 (+/- 1) inches of water (vacuum).</td>
   </tr>
     <tr>
     <td class="cellInspectionNumber">FS7</td>
