--- a/html/Inspection/Insp_INDUCTION SYSTEM.html
+++ b/html/Inspection/Insp_INDUCTION SYSTEM.html
@@ -22,6 +22,6 @@
   <tr>
     <td class="cellInspectionNumber">IS5</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check operation of the pressure differential switch by attaching a vacuum gauge to the 1/4” aluminum tube inside the plenum. Apply decreasing pressure gradually (vacuum). The battery switch should be ON, and someone in the cockpit should tell when the air filter light goes on. This should occur at 15 (+/- ½) inches of water decreasing pressure.  (18 (+/- ½) inches of water for the 802/802A equipped with PT6A-67R, -67F, -67AF engines).</td>
+    <td class="cellInspectionText">Check operation of the pressure differential switch by attaching a vacuum gauge to the 1/4" aluminum tube inside the plenum. Apply decreasing pressure gradually (vacuum). The battery switch should be ON, and someone in the cockpit should tell when the air filter light goes on. This should occur at 15 (+/- ½) inches of water decreasing pressure.  (18 (+/- ½) inches of water for the 802/802A equipped with PT6A-67R, -67F, -67AF engines).</td>
   </tr>
 </table>
