--- a/html/Maintenance/Aileron Boost Tab Trim and Rigging.html
+++ b/html/Maintenance/Aileron Boost Tab Trim and Rigging.html
@@ -10,7 +10,7 @@
     </li>
 
     <li>If necessary, adjust the pushrod length to align boost tab per step 2. Ensure that the pushrod threads are
-        visible in the “witness holes” on the rod end bearings and that the checknuts are tight against the bearings.
+        visible in the “witness holes" on the rod end bearings and that the checknuts are tight against the bearings.
     </li>
 
     <li>Ensure that all hardware is tight and properly installed. </li>
@@ -62,6 +62,6 @@
         the initial rigged position. If additional adjustment is required, contact the Air Tractor factory for
         assistance. </li>
 
-    <li>Ensure that the pushrod threads are visible in the “witness hole” on each rodend bearing, that each checknut is
+    <li>Ensure that the pushrod threads are visible in the “witness hole" on each rodend bearing, that each checknut is
         tight against the bearings, and that all hardware is tight and properly installed.</li>
 </ol>
