--- a/html/Maintenance/Battery Removal and Replacement.html
+++ b/html/Maintenance/Battery Removal and Replacement.html
@@ -1,5 +1,5 @@
 <p>A battery may be removed by following these steps:</p>
-<ol type=”1”>
+<ol type="1">
     <li>1.	Remove the side skins immediately forward of the firewall on both sides of the airplane. </li>
 
     <li>Release the spring latches and remove covers from all three of the battery boxes. </li>
