--- a/html/Maintenance/Brake Bleeding.html
+++ b/html/Maintenance/Brake Bleeding.html
@@ -1,15 +1,15 @@
 <p>If air enters the brake system because of worn O-rings or the replacement of brake system components, the brake pedal will become soft and the brakes lose some of their effectiveness.  It will then be necessary to bleed the brakes to remove the air.  Details of the brake-bleeding ports are shown in Figure 34. </p>
 
-<p>The conventional practice of placing a pressure pot line at the bleed screw location on the wheel cylinder and forcing fluid up through the system generally does not work.  The factory practice is to place one person in the cockpit and another at the wheel cylinder with a bleed screw wrench and a clean bottle to catch the fluid.  Before the bleeding process beings, it is necessary to obtain a short piece (about 6” long) of windshield wiper hose which will fit snugly over the bleed screw head so that all the fluid can be caught in the bottle and not wasted. </p>
+<p>The conventional practice of placing a pressure pot line at the bleed screw location on the wheel cylinder and forcing fluid up through the system generally does not work.  The factory practice is to place one person in the cockpit and another at the wheel cylinder with a bleed screw wrench and a clean bottle to catch the fluid.  Before the bleeding process beings, it is necessary to obtain a short piece (about 6" long) of windshield wiper hose which will fit snugly over the bleed screw head so that all the fluid can be caught in the bottle and not wasted. </p>
 
 <p>The procedure is as follows:</p>
 
-        <ol type=”1”>
+        <ol type="1">
          <li>The cockpit man pulls on the parking brake and leaves it on.  Then he pumps the pedal on the side being bled several times until the pedal begins to get fir.  The parking brake is left on since it is actually on a one-way check valve. </li>
 
-        <li>Then the cockpit man pushes on the pedal and shouts “Open” to the man at the wheel cylinder who proceeds to open the bleed screw with a ¼” open-end wrench.  Brake fluid and air then rush through the bleed screw, through the hose, and into the bottle. </li>
+        <li>Then the cockpit man pushes on the pedal and shouts “Open" to the man at the wheel cylinder who proceeds to open the bleed screw with a ¼" open-end wrench.  Brake fluid and air then rush through the bleed screw, through the hose, and into the bottle. </li>
 
-        <li>The cockpit man, who has held the pedal all the way down, then shouts “Close” as soon as the pedal reaches the down position, and the other person closes the bleed screw immediately. </li>
+        <li>The cockpit man, who has held the pedal all the way down, then shouts “Close" as soon as the pedal reaches the down position, and the other person closes the bleed screw immediately. </li>
 
         <li>The cockpit man uses the procedure outlined in (1) to obtain a firm pedal and again repeats step (2) and (3). </li>
 
