--- a/html/Maintenance/CONTROL SURFACE UNBALANCE LIMITS.html
+++ b/html/Maintenance/CONTROL SURFACE UNBALANCE LIMITS.html
@@ -2,7 +2,7 @@
 
 <p>When measuring unbalance, the control surfaces are painted complete with any applicable nav lights and tabs installed. </p>
 
-<p>To measure the unbalance, the control surface is mounted horizontally on the hinge line as shown in the following figure.  The trailing edge is supported with a scale and distance “x” measured.  The unbalance is equal to “x” multiplied by the scale reading “W”.  This value must not exceed the maximum allowable unbalance limit as specified below. </p>
+<p>To measure the unbalance, the control surface is mounted horizontally on the hinge line as shown in the following figure.  The trailing edge is supported with a scale and distance “x" measured.  The unbalance is equal to “x" multiplied by the scale reading “W".  This value must not exceed the maximum allowable unbalance limit as specified below. </p>
 
 <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
 
