--- a/html/Maintenance/Diagnosis of Compressor Failure.html
+++ b/html/Maintenance/Diagnosis of Compressor Failure.html
@@ -28,7 +28,7 @@
                 <p>With clutch disengage the pulley should spin freely with no wobbling or roughness/vibration</p>
             </li>
             <li>Air Gap Check
-                <p>Air gaps exceeding 0.051” (1.3 mm) can prevent engagement. This often is noticed after the clutch and
+                <p>Air gaps exceeding 0.051" (1.3 mm) can prevent engagement. This often is noticed after the clutch and
                     compressor
                     temperature is heated through normal use.</p>
                     <figure>
