--- a/html/Maintenance/ENGINE DRIVEN AIR CONDITIONER.html
+++ b/html/Maintenance/ENGINE DRIVEN AIR CONDITIONER.html
@@ -4,7 +4,7 @@
 
 <p>The 53126-X compressor has five reciprocating pistons driven by a rotating wobble-plate. It uses reed-type valves to
     control flow at the suction and pressure ports. Mechanical power to drive the compressor comes from an engine
-    accessory drive pad. Gears in the engine drive are a splined-quill shaft that turns a small poly “V” groove pulley
+    accessory drive pad. Gears in the engine drive are a splined-quill shaft that turns a small poly “V" groove pulley
     that drives the flywheel pulley with a serpentine belt. The flywheel pulley is connected to the compressor shaft by
     an electromagnetic clutch. </p>
 
