--- a/html/Maintenance/ENGINE MAINTENANCE.html
+++ b/html/Maintenance/ENGINE MAINTENANCE.html
@@ -1,17 +1,17 @@
-<p>Maintenance on your Pratt & Whitney PT6A engine is to be done in accordance with Pratt and Whitney Manuals that are listed under “Instructions for Continued Airworthiness” in the Description section. Time and experience have proven that an engine properly maintained will give excellent service with a minimum of down time and expense. Establish a routine maintenance schedule and adhere to it as closely as possible, taking into consideration the problems of busy schedules in mid-season. </p>
+<p>Maintenance on your Pratt & Whitney PT6A engine is to be done in accordance with Pratt and Whitney Manuals that are listed under “Instructions for Continued Airworthiness" in the Description section. Time and experience have proven that an engine properly maintained will give excellent service with a minimum of down time and expense. Establish a routine maintenance schedule and adhere to it as closely as possible, taking into consideration the problems of busy schedules in mid-season. </p>
 
 <p>The proper engine manuals for the airplane are listed below: </p>
-            <p>“Maintenance Manual - Turboprop Gas Turbine Engine- Models PT6A-45A/-145B/-45R” Manual Part No. 3027042, Vols. 1 & 2 </p>
+            <p>“Maintenance Manual - Turboprop Gas Turbine Engine- Models PT6A-45A/-145B/-45R" Manual Part No. 3027042, Vols. 1 & 2 </p>
 
             <p>“Maintenance Manual - Turboprop Gas Turbine Engine- Models PT6A-65AG/-67AR/-65B/ 
 
-                -65R” Manual Part No. 3032842, Vols. 1 & 2 </p>
+                -65R" Manual Part No. 3032842, Vols. 1 & 2 </p>
 
                 <p>“Maintenance Manual - Turboprop Gas Turbine Engine- Models PT6A-67/-67A/-67R/-67AF/ 
 
-                    -67AG/-67T” Manual Part No. 3036132, Vols. 1 & 2 </p>
+                    -67AG/-67T" Manual Part No. 3036132, Vols. 1 & 2 </p>
 
-                    <p>“Maintenance Manual - Turboprop Gas Turbine Engine- Models PT6A-67F” Manual Part No. 3071152, Vols. 1 & 2 </p>
+                    <p>“Maintenance Manual - Turboprop Gas Turbine Engine- Models PT6A-67F" Manual Part No. 3071152, Vols. 1 & 2 </p>
 
 <p>All of these manuals may be obtained from: </p>
                     <p>Pratt & Whitney Canada </p>
