--- a/html/Maintenance/Elevator Controls.html
+++ b/html/Maintenance/Elevator Controls.html
@@ -6,7 +6,7 @@
 
 <p>A friction device has been designed which bolts to the fuselage frame at the support bracket for the p/n 70117-1 elevator idler. This device is shown in Figure 68A. Friction is achieved by the clamping action about the elevator idler housing.  </p>
 
-<p>If at any time an oscillation is noted when the aircraft is flown hands off, the clamping action of the friction device should be increased. This is accomplished by tightening the bolt as shown in Figure 68A. It is called a “damper” and is mounted per drawing 71335. </p>
+<p>If at any time an oscillation is noted when the aircraft is flown hands off, the clamping action of the friction device should be increased. This is accomplished by tightening the bolt as shown in Figure 68A. It is called a “damper" and is mounted per drawing 71335. </p>
 
 <p>To measure the amount of friction required conduct the following procedure: </p>
 
