--- a/html/Maintenance/Engine Removal.html
+++ b/html/Maintenance/Engine Removal.html
@@ -1,7 +1,7 @@
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>CAUTION</p>
-    <p class=”boxCautionLargeText”>If an engine is being removed due to an unscheduled inspection, refer to the applicable Pratt & Whitney Engine Maintenance Manual. If the engine is being removed due to suspected or actual oil conamination, the airframe oil cooler and all asociated oil lines must be drained and flushed to prevent cross contamination of newly installed engine. The following components must be either repalced or sent to an appropriately rated faciclity for disassembly, inspection, flushing, and return to service.
-        <ol type=”1”>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">CAUTION</p>
+    <p class="boxCautionLargeText">If an engine is being removed due to an unscheduled inspection, refer to the applicable Pratt & Whitney Engine Maintenance Manual. If the engine is being removed due to suspected or actual oil conamination, the airframe oil cooler and all asociated oil lines must be drained and flushed to prevent cross contamination of newly installed engine. The following components must be either repalced or sent to an appropriately rated faciclity for disassembly, inspection, flushing, and return to service.
+        <ol type="1">
             <li>Propeller Governor (Primarily Governor)</li>
             <li>Overspeed Governor</li>
             <li>Fuel/Oil Heat Exchanger</li>
@@ -10,27 +10,27 @@
     </p>
 </div>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>NOTE</p>
-    <p class=”boxCautionLargeText”>The propeller governor and fuel/oil heat exchanger will be furnished with the new engine. The overspeed governor is a airframe item.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">NOTE</p>
+    <p class="boxCautionLargeText">The propeller governor and fuel/oil heat exchanger will be furnished with the new engine. The overspeed governor is a airframe item.</p>
 </div>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>CAUTION</p>
-    <p class=”boxCautionLargeText”>If the engine being removed is expected to be inactive longer than seven (7) days, refer to the appropriate Pratt & Whitney Engine Maintenance Manual for preservation instructions. Ensure that the appropriate logbook entries asre made to document level of preservation and affix a tag or other identifying document to the engine stating that the engine has been preserved.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">CAUTION</p>
+    <p class="boxCautionLargeText">If the engine being removed is expected to be inactive longer than seven (7) days, refer to the appropriate Pratt & Whitney Engine Maintenance Manual for preservation instructions. Ensure that the appropriate logbook entries asre made to document level of preservation and affix a tag or other identifying document to the engine stating that the engine has been preserved.</p>
 </div>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>NOTE</p>
-    <p class=”boxCautionLargeText”>Tag or otherwise identify all fuel and oil lines, hoses, electrical connectors, wires, nuts, bolts, and clamp locations during engine removal to ensure proper installation. Cap all lines and engine ports to prevent contamination.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">NOTE</p>
+    <p class="boxCautionLargeText">Tag or otherwise identify all fuel and oil lines, hoses, electrical connectors, wires, nuts, bolts, and clamp locations during engine removal to ensure proper installation. Cap all lines and engine ports to prevent contamination.</p>
 </div>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>NOTE</p>
-    <p class=”boxCautionLargeText”>Ensure suitable containers are presesnt to capture drainted fuel and oil during engine removal.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">NOTE</p>
+    <p class="boxCautionLargeText">Ensure suitable containers are presesnt to capture drainted fuel and oil during engine removal.</p>
 </div>
 
-        <ol type=”1”>
+        <ol type="1">
            <li>Ensure batter switch (BATT) is OFF.</li>
             <li>Turn fuel valve selector lever to OFF.</li>
             <li>Remove engine side cowlings, top cowling, and bottom cowling.</li>
@@ -109,9 +109,9 @@
                 <p>There are three bulkheads.  All three engine bulkhead assemblies must be removed separately. </p>
 
             <li>Disconnect power control cable at FCU input lever.</li>
-            <div class=”boxCautionLarge”>
-                <p class=”boxCautionLargeHeader”>NOTE</p>
-                <p class=”boxCautionLargeText”>Retain input lever for installation on replacement engine.</p>
+            <div class="boxCautionLarge">
+                <p class="boxCautionLargeHeader">NOTE</p>
+                <p class="boxCautionLargeText">Retain input lever for installation on replacement engine.</p>
             </div>
 
             <li>Disconnect condition lever control cable at FCU. </li>
@@ -127,9 +127,9 @@
             <li>Disconnect fuel flow transducer cannon plug, (if equipped) and remove transducer. </li>
             <li>Disconnect oil temperature sender and remove sender. </li>
             <li>Disconnect oil pressure line from restrictor fitting in engine and remove fitting.  </li>
-            <div class=”boxCautionLarge”>
-                <p class=”boxCautionLargeHeader”>NOTE</p>
-                <p class=”boxCautionLargeText”>Retain restrictor fitting for installation in replacement engine.</p>
+            <div class="boxCautionLarge">
+                <p class="boxCautionLargeHeader">NOTE</p>
+                <p class="boxCautionLargeText">Retain restrictor fitting for installation in replacement engine.</p>
             </div>
 
             <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png"><img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
@@ -159,20 +159,20 @@
             <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
             <p>Starter Generator</p>
 
-            <div class=”boxCautionLarge”>
-                <p class=”boxCautionLargeHeader”>NOTE</p>
-                <p class=”boxCautionLargeText”>If the starter generator is to be installed on the replacment engine, it may be convenient to leave the associated wiring connected and remove the S/G from the QAD mount, tying it back to support the weight.</p>
+            <div class="boxCautionLarge">
+                <p class="boxCautionLargeHeader">NOTE</p>
+                <p class="boxCautionLargeText">If the starter generator is to be installed on the replacment engine, it may be convenient to leave the associated wiring connected and remove the S/G from the QAD mount, tying it back to support the weight.</p>
  </div>
 
-            <div class=”boxCautionLarge”>
-                <p class=”boxCautionLargeHeader”>CAUTION</p>
-                <p class=”boxCautionLargeText”>The starter generator must be fully supported during the removal/installation. Do not allow the weight of the starater generator to rest on the spline drive as inserted into the engine or damage to the engine starter generator drive centrifugal breather carbon seal will result.</p>
+            <div class="boxCautionLarge">
+                <p class="boxCautionLargeHeader">CAUTION</p>
+                <p class="boxCautionLargeText">The starter generator must be fully supported during the removal/installation. Do not allow the weight of the starater generator to rest on the spline drive as inserted into the engine or damage to the engine starter generator drive centrifugal breather carbon seal will result.</p>
                 </div>
 
                 <li>Remove the air conditioner compressor assembly from the drive pad.</li>
-                <div class=”boxCautionLarge”>
-                    <p class=”boxCautionLargeHeader”>CAUTION</p>
-                    <p class=”boxCautionLargeText”>Do not disconnect air conditioning hoses or freon will be discharged. Tie compressor back to support the weight while engine change is in process.</p>
+                <div class="boxCautionLarge">
+                    <p class="boxCautionLargeHeader">CAUTION</p>
+                    <p class="boxCautionLargeText">Do not disconnect air conditioning hoses or freon will be discharged. Tie compressor back to support the weight while engine change is in process.</p>
      </div>
      
              <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
@@ -181,9 +181,9 @@
                 <li>  Attach the engine spreader bar to the engine hoisting lugs. Position a suitable hoist directly over the engine and attach the engine spreader bar. </li>
                 <li>Raise the hoist as necessary to support the weight of the engine. </li>
                  <li>Remove the engine mount hardware.  </li>
-                 <div class=”boxCautionLarge”>
-                    <p class=”boxCautionLargeHeader”>CAUTION</p>
-                    <p class=”boxCautionLargeText”>Prior to removing the engine from the airframe, ensure that all associated lines, hoses, wiring, cables, tubes, etc. are free and clear from obstructing the removal of the engine.</p>
+                 <div class="boxCautionLarge">
+                    <p class="boxCautionLargeHeader">CAUTION</p>
+                    <p class="boxCautionLargeText">Prior to removing the engine from the airframe, ensure that all associated lines, hoses, wiring, cables, tubes, etc. are free and clear from obstructing the removal of the engine.</p>
          </div>
                 <li><img class="imageCentered_3x2" src="img/imgTemplate_3x2.png"><img class="imageCentered_3x2" src="img/imgTemplate_3x2.png"></li>
                 <p>Hoist engine clear of airframe and place in suitable engine stand or shipping container. </p>
