--- a/html/Maintenance/Equipment.html
+++ b/html/Maintenance/Equipment.html
@@ -1,6 +1,6 @@
 <p>Equipment recommended for troubleshooting the charging system is shown below:</p>
 
-<ol type=”1”>
+<ol type="1">
     <li>A multimeter capable of .01V resolution in the 0-2.5V range, .15V resolution in the 0-30V range and capable of reading from a fraction of an OHM to several KILOHMS will be required. An auto-ranging digital instrument is ideal but any good quality until will work. For point-to-point ringout, the ohmmeter function will be used. </li>
     <li>A Breakout Box- This is not absolutely essential but it is very effective in localizing many problems. It can be fabricated per Figure 45 or it is available from your dealer at a reasonable price. </li>
 </ol>
