--- a/html/Maintenance/Evacuation.html
+++ b/html/Maintenance/Evacuation.html
@@ -54,9 +54,9 @@
             <td class="plainTableNormalCell"> 5 F° </td>
         </tr>
     </table>
-    <p>Allow the vacuum pump to run for 30 minutes drawing down near to 30” Hg. After 30 minutes of evacuation
+    <p>Allow the vacuum pump to run for 30 minutes drawing down near to 30" Hg. After 30 minutes of evacuation
         close the
-        service valves and turn off the pump. Let the system sit for 10 minutes, if vacuum loss of 2” or greater
+        service valves and turn off the pump. Let the system sit for 10 minutes, if vacuum loss of 2" or greater
         occurs
         there is probably a leak.</p>
     <p>Other reasons a vacuum cannot be held for 10 minutes after shut off:</p>
