--- a/html/Maintenance/Filling the Hopper Tanks.html
+++ b/html/Maintenance/Filling the Hopper Tanks.html
@@ -6,9 +6,9 @@
 
 <p>The hopper tanks are vented to allow the release of air that is displaced during the filling process at a filling rate up to 500 gallons per minute. The hopper vents normally will not accommodate the flow of liquid in the event the tanks are overfilled. An over-fill protection valve has been installed on later models, which allows passage of hopper liquid out through the vent tubes. </p>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>CAUTION</p>
-    <p class=”boxCautionLargeText”>Structural damage to the hopper tanks can occur if the tanks are overfilled using the single-point filling connections. It is imperative that the hopper quantity gauges are montitored through the filling process and the flow of materials is shut off prior to the tanks becoming full. Sufficient margin should be allowed to ensure that the quantity of material in the tanks does not exceed their FULL level.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">CAUTION</p>
+    <p class="boxCautionLargeText">Structural damage to the hopper tanks can occur if the tanks are overfilled using the single-point filling connections. It is imperative that the hopper quantity gauges are montitored through the filling process and the flow of materials is shut off prior to the tanks becoming full. Sufficient margin should be allowed to ensure that the quantity of material in the tanks does not exceed their FULL level.</p>
 </div>
 
 <p>When the desired hopper tank quantity is reached, the valve is closed and the quick disconnect hose is removed, allowing a quick return of the aircraft to service. </p>
