--- a/html/Maintenance/Flap Actuator.html
+++ b/html/Maintenance/Flap Actuator.html
@@ -4,7 +4,7 @@
 
 <p>The actuator assembly has a threaded collar. This collar is threaded internally to match the threads on the worm
        drive threads of the actuator, and it is threaded externally to match the threads of the Air Tractor Tee
-       assembly, which is p/n 70037-1. The Tee assembly is attached to the two 1/4” thick aluminum 70581-1 arm
+       assembly, which is p/n 70037-1. The Tee assembly is attached to the two 1/4" thick aluminum 70581-1 arm
        assemblies that are bolted to the flap torque tube assembly. The Tee assembly has a steel grease shield and cap
        attached. The shield is p/n 70039-2 and is attached to the Tee with two AN500A5-3 screws. Be sure the lock
        washers are under the head of the AN500A5-3 screws. The cap is a 1 1/8 SC Caplug attached to the shield with a
@@ -29,7 +29,7 @@
 <p>The actuator assembly has a 1-inch diameter ball screw shaft. A ball nut moves along this shaft. The 71149-1 yoke
        (tee) assembly is fitted on the ball nut and held in place with the 71152-1 yoke nut assembly. This yoke nut
        includes a steel grease shield and is secured on the ball nut with two 90289A338 set screws. The yoke assembly is
-       attached to two 1/4” thick aluminum 70032-1 arm assemblies that are bolted with four AN4-7A bolts to the flap
+       attached to two 1/4" thick aluminum 70032-1 arm assemblies that are bolted with four AN4-7A bolts to the flap
        torque tube assembly. See Figures 27A and 27B. </p>
 <div class='boxCautionLarge'>
        <p class='boxCautionLargeHeader'>CAUTION</p>
