--- a/html/Maintenance/Flap Motor Troubleshooting.html
+++ b/html/Maintenance/Flap Motor Troubleshooting.html
@@ -1,6 +1,6 @@
 <p>If the micro-switches appear OK the flap motor may be checked as follows:</p>
 
-<ol type=”1”>
+<ol type="1">
     <li>Slide the conduit down from the wire splice (Wristlock) where the red and black wires go into the wire bundle.</li>
 
     <li>Note which wires the black wire from the motor connects to.</li>
