--- a/html/Maintenance/Flap-Elevator Interconnect System Rigging.html
+++ b/html/Maintenance/Flap-Elevator Interconnect System Rigging.html
@@ -8,7 +8,7 @@
 
         <p><b><u>Rigging Instsructions</u></b></p>
 
-        <ol type=”1”>
+        <ol type="1">
             <li>Completely retract the flaps to the 0° position.</li>
 
             <li>Disconnect the elevator down spring (p/n 70814-3 for single controls, p/n 70814-1 for dual controls) where it connects to the aft elevator controls idler.  This can be done with the flight control stick in the full forward position. </li>
@@ -25,7 +25,7 @@
 
             <li>Ensure the 70796-1 pushrod is installed, connecting the tensioner assembly and the clamp arm as shown above. </li>
 
-            <li>Rotate the tensioner assembly to the 60° nominal angle shown below.  Note that the holes in the tensioner bearing can be used to “eyeball” this angle.  Allow the 70784-1 clamp arm to rotate on the flap torque tube as necessary.  When the tensioner is at the 60° angle, tighten the clamp arm bolts to secure the clamp arm to the flap torque tube. </li>
+            <li>Rotate the tensioner assembly to the 60° nominal angle shown below.  Note that the holes in the tensioner bearing can be used to “eyeball" this angle.  Allow the 70784-1 clamp arm to rotate on the flap torque tube as necessary.  When the tensioner is at the 60° angle, tighten the clamp arm bolts to secure the clamp arm to the flap torque tube. </li>
 
             <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
 
