--- a/html/Maintenance/Flaps.html
+++ b/html/Maintenance/Flaps.html
@@ -1,4 +1,4 @@
-<p>The flaps are attached to the 1/2” thick aluminum mid and inboard flap arms with AN4-12A bolts and to the outboard arm with an AN4-24A bolt. The order of washers and parts with the bolt pointing inboard is a AN970-4 large washer under the bolt head, then the bearing (Fafnir KP4), then the steel flap arm, then a AN960-416 washer, then a AN365-428A nut. </p>
+<p>The flaps are attached to the 1/2" thick aluminum mid and inboard flap arms with AN4-12A bolts and to the outboard arm with an AN4-24A bolt. The order of washers and parts with the bolt pointing inboard is a AN970-4 large washer under the bolt head, then the bearing (Fafnir KP4), then the steel flap arm, then a AN960-416 washer, then a AN365-428A nut. </p>
 
 <p>The flap push-rod is attached to the flap with an AN4-12A bolt, which is pointing outboard, and the order of parts is AN960-416 washer under the nut. The push-rod has an adjustable Fafnir RE4F6-2 bearing with an AN316-6 check nut. Be sure that the bearing is positioned to allow the push-rod to be rotated slightly from side to side. </p>
 
