--- a/html/Maintenance/Flushing.html
+++ b/html/Maintenance/Flushing.html
@@ -64,7 +64,7 @@
             mounted.</p>
     </li>
     <li>Importance Of Flushing Direction
-        <p>“Back flush”, or flushing in the reverse direction to normal flow, is the most effective. The plate
+        <p>“Back flush", or flushing in the reverse direction to normal flow, is the most effective. The plate
             fin
             evaporators
             used on many front and rear evaporators have many small passages which are difficult to clean
