--- a/html/Maintenance/Fuel Nozzle Cleaning.html
+++ b/html/Maintenance/Fuel Nozzle Cleaning.html
@@ -4,7 +4,7 @@
 
 <p>To remove or install fuel nozzles, refer to the proper Pratt & Whitney manual in Section 1, INSTRUCTIONS FOR CONTINUED AIRWORHTINESS. Write down the location of the primary and secondary nozzles. The primary nozzle may be identified by a weld spot on the flat area next to one of the bolts. See Figure 48. DO NOT MARK ON THE GAS GENERATOR CASE WITH A PENCIL. </p>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>IMPORTANT</p>
-    <p class=”boxCautionLargeText”>The quality of fuel and the condition of the fuel and fuel nozzle will have a direct relation to the condition and the longevity of your engine.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">IMPORTANT</p>
+    <p class="boxCautionLargeText">The quality of fuel and the condition of the fuel and fuel nozzle will have a direct relation to the condition and the longevity of your engine.</p>
 </div>
