--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -2,7 +2,7 @@
 
 <p>Remove the finger-strainer screen from each wing tank as follows: </p>
 
-<ol type=”1”>
+<ol type="1">
     <li>Defuel both wing tanks by use of the valve outlet in the header tank.</li>
 
     <li>Remove the hose-end fitting from the elbow fitting that enter the fuel cell through the inboard rib of the wing. </li>
