--- a/html/Maintenance/Hopper Gate Box and Adapter.html
+++ b/html/Maintenance/Hopper Gate Box and Adapter.html
@@ -2,7 +2,7 @@
 
 <p>The gate box and adapter may be removed by use of the following procedure: </p>
 
-<ol type=”1”>
+<ol type="1">
     <li>Remove fuselage side skins adjacent to the hopper tank.</li>
     <li>Remove the gate control rod attachments to the gate box.</li>
     <li>Remove attachments to spray pump line. </li>
