--- a/html/Maintenance/Hopper Tanks.html
+++ b/html/Maintenance/Hopper Tanks.html
@@ -6,7 +6,7 @@
 
 <p>Details of the upper view of the hopper tanks are shown in Figure 16. To remove the hopper tanks, the following procedures may be followed: </p>
 
-<ol type=”1”>
+<ol type="1">
     <li>Remove the hopper gate box and gate box adapter per procedures shown under <b>Hopper Gate Box and Adapter.</b> </li>
     <li>Remove the fuselage side skins on both sides of the hopper tank. </li>
     <li>If the front hopper is to be removed, remove the upper engine cowl skins.</li>
