--- a/html/Maintenance/Installing a New Gill Dry-Charged Battery.html
+++ b/html/Maintenance/Installing a New Gill Dry-Charged Battery.html
@@ -1,14 +1,14 @@
 <p>When a new Gill G-246 (G-246AT) battery is installed in the airplane, certain procedures must be observed to ensure the satisfactory service of the battery. </p>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>CAUTION</p>
-    <p class=”boxCautionLargeText”>Do not remove seals or vent plugs until ready to fill with electrolyte.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">CAUTION</p>
+    <p class="boxCautionLargeText">Do not remove seals or vent plugs until ready to fill with electrolyte.</p>
 </div>
 
 
 <p>The procedure for charging the battery is shown below.</p>
 
-<ol type=”1”>
+<ol type="1">
         <li>Remove seals from cells.</li>
 
         <li>On INITIAL WET DOWN, fill each cell with 1.235 specific gravity sulfuric acid to a level JUST 	ABOVE THE SEPARATORS. </li>
@@ -31,6 +31,6 @@
 
         <li>After the battery is FULLY CHARGED, AND WITH CHARGER STILL ON, ADJUST ELECTROLYTE LEVEL TO THE BOTTOM OF THE SPLIT RING and continue to charge for one hour. Clean and neutralize any spilled acid prior to installing in aircraft. </li>
 
-<p>For more detailed instructions call 1-800-456-0070 and ask for your free “GILL” service manual. </p>
+<p>For more detailed instructions call 1-800-456-0070 and ask for your free “GILL" service manual. </p>
 
         </ol>
