--- a/html/Maintenance/PROPELLER MAINTENANCE.html
+++ b/html/Maintenance/PROPELLER MAINTENANCE.html
@@ -1,11 +1,11 @@
-<p>Maintenance on your Hartzell propeller is to be done in accordance with the Propeller Owner’s Manual and Log Book listed under “Instructions for Continued Airworthiness” in the Description section.  Establish a routine maintenance schedule and adhere to it as closely as possible.  The proper propeller maintenance manual for this airplane is:  “Propeller Owner’s Manual and Log Book” Manual 139.  The manual may be obtained from: </p>
+<p>Maintenance on your Hartzell propeller is to be done in accordance with the Propeller Owner’s Manual and Log Book listed under “Instructions for Continued Airworthiness" in the Description section.  Establish a routine maintenance schedule and adhere to it as closely as possible.  The proper propeller maintenance manual for this airplane is:  “Propeller Owner’s Manual and Log Book" Manual 139.  The manual may be obtained from: </p>
 
 <p>Hartzell Propeller Inc.
     One Propeller Place
     Piqua, Ohio 45356-2634 USA
 </p>
 
-<p>Propeller pitch settings are -10.0° (reverse), 13.9° (low pitch) at the 42” station for the -67 series propeller. Propeller pitch settings are -11.0° (reverse), 16.5° (low pitch) at the 42” station for the -65 series propeller. See Propeller Owner’s Manual for required maintenance and life limited parts. </p>
+<p>Propeller pitch settings are -10.0° (reverse), 13.9° (low pitch) at the 42" station for the -67 series propeller. Propeller pitch settings are -11.0° (reverse), 16.5° (low pitch) at the 42" station for the -65 series propeller. See Propeller Owner’s Manual for required maintenance and life limited parts. </p>
 
 <p>The procedure for checking the overspeed governor is as follows:  </p>
 
