--- a/html/Maintenance/ROUTINE MAINTENANCE INSPECTION.html
+++ b/html/Maintenance/ROUTINE MAINTENANCE INSPECTION.html
@@ -1,6 +1,6 @@
 <p>The following is a guide to your routine maintenance inspections. It is not an absolute, but intended to be a guide to help you in establishing a schedule that will maintain your aircraft in the proper manner. </p>
 
-<p>The engine and propeller should be inspected and maintained in accordance with the appropriate maintenance manual listed under “Instructions for Continued Airworthiness” in the Description section. </p>
+<p>The engine and propeller should be inspected and maintained in accordance with the appropriate maintenance manual listed under “Instructions for Continued Airworthiness" in the Description section. </p>
 
 <p>CHANGE OIL IN ACCORDANCE WITH APPLICABLE PRATT AND WHITNEY  SERVICE BULLETIN. </p>
 
@@ -24,6 +24,6 @@ P/N C100168 ACUATOR AT 1500 HOUR INTERVALS. </p>
 
  <p>OVERHAUL PROPELLER PER HARTZELL REQUIREMENTS (See Hartzell Service Letter HC-SL-61-61Y, Rev 1 or later). </p>
 
- <p>HANGE MAIN GEAR BOLTS IN ACCORDANCE WITH SCHEDULE IN “MAIN AND TAIL GEAR ATTACH BOLTS” OF THIS SECTION </p>
+ <p>HANGE MAIN GEAR BOLTS IN ACCORDANCE WITH SCHEDULE IN “MAIN AND TAIL GEAR ATTACH BOLTS" OF THIS SECTION </p>
 
- <p>CHANGE TAIL GEAR BOLTS IN ACCORDANCE WITH SCHEDULE IN “MAIN AND TAIL GEAR ATTACH BOLTS” OF THIS SECTION </p>
+ <p>CHANGE TAIL GEAR BOLTS IN ACCORDANCE WITH SCHEDULE IN “MAIN AND TAIL GEAR ATTACH BOLTS" OF THIS SECTION </p>
