--- a/html/Maintenance/Rudder-Aileron Interconnect System Rigging.html
+++ b/html/Maintenance/Rudder-Aileron Interconnect System Rigging.html
@@ -8,7 +8,7 @@
 
 <p>Complete these instructions on both sides of the aircraft simultaneously.</p>
 
-<ol type=”1”>
+<ol type="1">
     <li>Lock the flight control stick in the neutral position using the cockpit control lock.  Confirm the ailerons are in the neutral position</li>
 
     <li>Check the position of the clamp that supports the two idler arms.  This clamp should be 10.0 (+/-½) inches from the interface of the longeron and diagonal tube.  See figure 1.  If necessary, loosen the clamp, adjust it within this range, and retighten hardware.</li>
