--- a/html/Maintenance/Spray Lever Controls.html
+++ b/html/Maintenance/Spray Lever Controls.html
@@ -29,7 +29,7 @@ The push-rod from the bellcrank to the valve is p/n 81149-1 which has an NMB MS1
 
 <p>The spray lever in the cockpit can be adjusted to personal preference by adjusting the Spray Handle Adjustment Bearing as shown in Figure 62. The procedures that may be followed for adjustment of the spray-lever position in the cockpit: </p>
 
-<ol type=”1”>
+<ol type="1">
     <li>Remove the bolt that secures the adjustment bearing to the bellcrank.</li>
     <li>Loosen the check nut on the stem of the clevis.</li>
     <li>Secure the bellcrank to hold the spray valve in the SPRAY OFF position.</li>
