--- a/html/Maintenance/Spray Pump.html
+++ b/html/Maintenance/Spray Pump.html
@@ -6,7 +6,7 @@
 
 <p>The procedure for removing the spray pump follows: </p>
 
-    <ol type=”1”>
+    <ol type="1">
          <li>Remove fan pitch-control cable or brake-control cable. </li>
          <li>Loosen the hose coupling that secures the pump inlet line to the pump.</li>
          <li>Loosen the hose coupling that secures the pump outlet port to the spray valve line.</li>
