--- a/html/Maintenance/TORQUE VALUES AND GUIDANCE FOR BOLT INSTALLATION.html
+++ b/html/Maintenance/TORQUE VALUES AND GUIDANCE FOR BOLT INSTALLATION.html
@@ -8,7 +8,7 @@
 
 <p>When installed, at least one thread of the bolt should be visible above the end of the nut.  Nuts must not bottom out on the unthreaded shank of the bolt. </p>
 
-<p>Variation in bolt length or part stack height (due to manufacturing tolerances) sometimes requires the addition of deletion of a washer.  A washer is required under the nut.  If required to achieve proper thread engagement, two washers may be used under the nut, but a maximum of one washer may be used under the bolt head.  If deletion of a washer is required, first delete any non-chamfered washer under the head of the bolt.  A thin washer (e.g. AN960 “L”) may be substituted for a regular washer where a bolt is a little short. </p>
+<p>Variation in bolt length or part stack height (due to manufacturing tolerances) sometimes requires the addition of deletion of a washer.  A washer is required under the nut.  If required to achieve proper thread engagement, two washers may be used under the nut, but a maximum of one washer may be used under the bolt head.  If deletion of a washer is required, first delete any non-chamfered washer under the head of the bolt.  A thin washer (e.g. AN960 “L") may be substituted for a regular washer where a bolt is a little short. </p>
 
 <p>Torque values for nuts and bolts are shown in Table 1 below.  A specific torque callout in the manual supersedes any value listed here. </p>
 
