--- a/html/Maintenance/Troubleshooting Procedures.html
+++ b/html/Maintenance/Troubleshooting Procedures.html
@@ -112,7 +112,7 @@
         </tr>
 </table>
 
-<p>In the following, the expression “GEN will not come on line” is evidence by a low Lower Instrument Panel Voltmeter reading (25V or lower) and the LV Light staying on. </p>
+<p>In the following, the expression “GEN will not come on line" is evidence by a low Lower Instrument Panel Voltmeter reading (25V or lower) and the LV Light staying on. </p>
 
 <p>Symptom- After engine start, GEN will not come on line unless the Start Switch is engaged momentarily after the Generator Switch is turned on. </p>
 
