--- a/html/Maintenance/Vertical Fin.html
+++ b/html/Maintenance/Vertical Fin.html
@@ -4,6 +4,6 @@
 
 <p>The rear spar attaches to the fuselage frame with NAS1303 bolts of various lengths, depending on the amount of shims required between the fuselage frame and the rear spar. The shims are of various thickness (.063, .080, .125) and the upper shims are combinations of p/n 30159-1, -2, or -3 while the lower shims are combinations of p/n 30160-1, -2, or -3. </p>
 
-<p>The vertical fin rear spar is drilled on installation where the attachment is made to top longeron. If a new fin is installed, make a drill template from the original fin rear spar in order to drill the four 3/16” holes for the attachment to the upper longeron. The template should be 2.44” wide and long enough to pick up the two lower attach bolts. The template should be made of either aluminum or steel, at least .063” thick. </p>
+<p>The vertical fin rear spar is drilled on installation where the attachment is made to top longeron. If a new fin is installed, make a drill template from the original fin rear spar in order to drill the four 3/16" holes for the attachment to the upper longeron. The template should be 2.44" wide and long enough to pick up the two lower attach bolts. The template should be made of either aluminum or steel, at least .063" thick. </p>
 
 <p>Install the fin on the aircraft and install the bolts at the front and rear spar locations. Be sure the correct amount of shims is used between the fuselage frame and the rear spar.  The rear spar bolts have a torque of 60 inch-pounds at the nut. </p>
