--- a/html/Maintenance/Windshield.html
+++ b/html/Maintenance/Windshield.html
@@ -6,7 +6,7 @@
 
 <p>The safety-glass center windshield can be cleaned with a soft rag and any good glass cleaner. The center windshield p/n is 10665-1 for the AT-802 and p/n 11248-1 for the AT-802A. </p>
 
-<p>The windshield is sealed around the upper and lower edge under the metal flanges with commercial grade putty. Then the entire perimeter of the windshield is sealed with PR1422-A2 (See FUEL TANKS in Section 2 for mixing instructions). Drill .166 holes through the windshield to match the aluminum attachments. Then remove the windshield and enlarge the holes in the windshield to 3/16” to prevent the attach screws from over-stressing and cracking the windshield at any location. </p>
+<p>The windshield is sealed around the upper and lower edge under the metal flanges with commercial grade putty. Then the entire perimeter of the windshield is sealed with PR1422-A2 (See FUEL TANKS in Section 2 for mixing instructions). Drill .166 holes through the windshield to match the aluminum attachments. Then remove the windshield and enlarge the holes in the windshield to 3/16" to prevent the attach screws from over-stressing and cracking the windshield at any location. </p>
 
 <p>To remove any of the windshields, the following procedure may be followed: </p>
 
@@ -26,6 +26,6 @@ The sealant may be removed from the edges of the panel and the windshield recess
 
 <p>The windshield may be reinstalled by reversing the removal steps above. After the windshield is in place, it should be resealed on its outer surface using Courtaulds Aerospace PR 14-22 B-2 sealant. The sealant is catalyzed with supplied material. </p>
 
-<p>The best method to apply the sealant is to mask the retaining strips first and then mask the windshield leaving 1/8” of windshield surface exposed between the tape and the retaining strip. Apply the sealant sparingly to the exposed windshield surface, then remove masking tape. </p>
+<p>The best method to apply the sealant is to mask the retaining strips first and then mask the windshield leaving 1/8" of windshield surface exposed between the tape and the retaining strip. Apply the sealant sparingly to the exposed windshield surface, then remove masking tape. </p>
 
 <p>The sealant starts to cure when catalyzed, so time is precious when applying sealant. The sealant should be allowed a 24-hour cure before stressing. </p>
