--- a/html/Inspection/Insp_FLAPS.html
+++ b/html/Inspection/Insp_FLAPS.html
@@ -15,7 +15,7 @@
   </tr><tr>
     <td class="cellInspectionNumber">F4</td>
     <td class="cellInspectionInterval">(400)</td>
-    <td class="cellInspectionText">Inspect flap actuator shaft, bushing and bearing for wear, per S.I.L. #802-0021A.  Significant wear requires replacement of parts or the complete actuator and is defined as ½” or more of flap trailing edge movement with moderate hand pressure on the trailing edge.</td>
+    <td class="cellInspectionText">Inspect flap actuator shaft, bushing and bearing for wear, per S.I.L. #802-0021A.  Significant wear requires replacement of parts or the complete actuator and is defined as ½" or more of flap trailing edge movement with moderate hand pressure on the trailing edge.</td>
   </tr><tr>
     <td class="cellInspectionNumber">F5</td>
     <td class="cellInspectionInterval">(12 Months)</td>
