--- a/html/Maintenance/Canopy Doors.html
+++ b/html/Maintenance/Canopy Doors.html
@@ -1,6 +1,6 @@
 <p>The canopy doors seal against the door frame with X202Bt neoprene sponge. This material has a PSA backing. Be careful not to stretch the strip during installation or it will come loose. </p>
 
-<p>The door frame has a slight inward bow of 1/8” to allow for door deflection outward at high speeds. The low pressure around the canopy causes the doors to bow outward. The door latch should provide a snug door fit, and if it does not, and the weather-strip is in good condition, bend the latch arm that rides on the plated striker plate (p/n 10354-1 (L/H) or -2 (R/H)). </p>
+<p>The door frame has a slight inward bow of 1/8" to allow for door deflection outward at high speeds. The low pressure around the canopy causes the doors to bow outward. The door latch should provide a snug door fit, and if it does not, and the weather-strip is in good condition, bend the latch arm that rides on the plated striker plate (p/n 10354-1 (L/H) or -2 (R/H)). </p>
 
 <p>The door glass is attached with 1/16 x 1 1/4 felt with PSA backing (p/n F-7) around the perimeter. The machine screws around the glass are AN526-632-8 and the nuts are AN365-632. Be careful not to over-tighten the screws or the glass will crack. </p>
 
@@ -8,7 +8,7 @@
 
 <p>The right-hand canopy door may be removed by following these steps: </p>
 
-<ol type=”1”>
+<ol type="1">
     <li>Close and lock the canopy door.</li>
     <li>Remove nuts and washers from hinge bolts.</li>
     <li>Open the door and support it while removing the AN3 hinge bolts. </li>
