--- a/html/Maintenance/Compressor Washes.html
+++ b/html/Maintenance/Compressor Washes.html
@@ -6,9 +6,9 @@
 
 <p>The P&WC maintenance manual lists all the approved compressor washing materials. The manual also gives the proper mixing ratios for the wash solution. </p>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>CAUTION</p>
-    <p class=”boxCautionLargeText”>Do <u>NOT</u> mix compressor washing materials in stronger strenghts than shown in the P&WC manual. The ratios are the MAXIMUM allowed. An operator may do more damage than good if trying to wash a compressor with a higher concentration of cleaning agen than that recommended by P&WC.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">CAUTION</p>
+    <p class="boxCautionLargeText">Do <u>NOT</u> mix compressor washing materials in stronger strenghts than shown in the P&WC manual. The ratios are the MAXIMUM allowed. An operator may do more damage than good if trying to wash a compressor with a higher concentration of cleaning agen than that recommended by P&WC.</p>
 </div>
 
 <p>Prior to performing a compressor wash, the engine MUST be allowed to cool for a minimum of three hours to avoid stressing HSI components. </p>
