--- a/html/Maintenance/Flap Relay Troubleshooting.html
+++ b/html/Maintenance/Flap Relay Troubleshooting.html
@@ -5,8 +5,8 @@
   If there is battery voltage there, have someone attempt to extend and retract the flaps with the flap switch while
   checking for battery voltage at the relay coils, wire -236 and -238 for down and up respectively. If there is no
   battery voltage when the flap switch is activated check the micro-switches and the flap switch. If there is battery
-  voltage at the respective relay coils when the flap switch is activated you should hear the relay “click” and the flap
-  motor should operate. If the relay “clicks” and the flap motor does not operate, check for battery voltage at the
+  voltage at the respective relay coils when the flap switch is activated you should hear the relay “click" and the flap
+  motor should operate. If the relay “clicks" and the flap motor does not operate, check for battery voltage at the
   motor. If there is not battery voltage at the motor when the relay clicks the relay contacts are probably bad and the
   relay should be replaced. If the relay does not click turn off the master switch, remove one of the coil wires and
   check the coil with an Ohmmeter. The relay coil terminals are the two smaller studs (# 10) on the relay case. The
@@ -115,12 +115,12 @@
   directions because a limit switch will be depressed). </p>
 
 <p>If it is determined that the motor is not functioning properly, remove and inspect the spring loaded motor brushes
-  for excessive wear. Excessive wear is defined as a brush that has worn down to a length of 1/8” or less. If this is
+  for excessive wear. Excessive wear is defined as a brush that has worn down to a length of 1/8" or less. If this is
   the case, P/N 03-057 replacement brushes can be purchased from your dealer (2 required for each motor). For a
   replacement motor, order P/N 90-1026 from your dealer. </p>
 
 <p>ACTUATOR OVERHAUL STEPS </p>
-<ol type=”1”>
+<ol type="1">
   <li>Save and reuse all hardware unless otherwise specified. </li>
   <li>Remove and inspect the 90-1026 flap motor. Replace on condition. Replace the motor brushes with P/N 03-057
     replacement brushes from Specialty Motors. </li>
@@ -133,7 +133,7 @@
     (PS3KDD), the roller bearing (00050 and 00150), and the seal (7410), and the O-Ring MS35333-39). Clean and inspect
     the remaining parts.</li>
   <li>Check the 71118-1 worm gear for any gouging or excessive wear on the teeth. Check the 71154-1 bronze bearing for
-    excessive wear (excessive wear is defined as the bearing being thinner than .040” at the center.) Check the 71117-1
+    excessive wear (excessive wear is defined as the bearing being thinner than .040" at the center.) Check the 71117-1
     ballscrew shaft dimensions. Replace all discarded parts with new parts to accurately set the shaft dimensions.
     Inspect.</li>
   <li>Rebuild the 71147-1 actuator shaft per Drawing 71147. Use the T71147-1 and T71147-2 tooling to accurately set the
