--- a/html/Maintenance/Fuel Filter Cleaning.html
+++ b/html/Maintenance/Fuel Filter Cleaning.html
@@ -1,6 +1,6 @@
 <p>The firewall fuel filter is shown in Figure 46. Should something get into the system, your aircraft is equipped with a fuel filter located on the firewall between the batteries. The filter element for this is a FRAM CS1133PL. The firewall filter element is inexpensive, and should be replaced at least every 100 hours. If you are using fuel from a source not equipped with a water separator, change the element every 50 hours as follows: </p>
 
-    <ol type=”1”>
+    <ol type="1">
         <li>Loosen the center nut of the top of the filter assembly.</li>
         <li>Remove the metal bowl.</li>
         <li>Check the bowl for water and rust particles.</li>
@@ -10,7 +10,7 @@
 
 <p>The engine also has a disposable fuel filter on the high pressure pump located at the 3 o’clock position on the accessory case. This element is an AN6235-3A. The filter should be changed anytime the firewall filter is found contaminated or every 300 hours. See the proper engine manual in INSTRUCTIONS FOR CONTINUED AIRWORHTINESS in Section 1 for details on removing and replacing this filter</p>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>CAUTION</p>
-    <p class=”boxCautionLargeText”>If any contamination is found in either fuel filter, investigate the cause and rectify the problem.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">CAUTION</p>
+    <p class="boxCautionLargeText">If any contamination is found in either fuel filter, investigate the cause and rectify the problem.</p>
 </div>
