--- a/html/Maintenance/Fuselage Removable Skins.html
+++ b/html/Maintenance/Fuselage Removable Skins.html
@@ -4,6 +4,6 @@
 
 <p>The side skins can be easily removed. </p>
 
-<p>The side skins have a thin strip of cork to prevent chafing. This cork is 1/16” thick by 1 1/8” wide, comes in 10 ft. rolls, has pressure sensitive adhesive backing and is p/n 1/16x1 1/8 CORK. A punch is made of a piece of 3/4” OD tubing and one end sharpened on a grinder. At each 1/4 turn fastener position, the cork is marked and a 3/4” hole is punched. </p>
+<p>The side skins have a thin strip of cork to prevent chafing. This cork is 1/16" thick by 1 1/8" wide, comes in 10 ft. rolls, has pressure sensitive adhesive backing and is p/n 1/16x1 1/8 CORK. A punch is made of a piece of 3/4" OD tubing and one end sharpened on a grinder. At each 1/4 turn fastener position, the cork is marked and a 3/4" hole is punched. </p>
 
 <p>The side skins are sheared to size, but the 1/4 turn fastener holes will require drilling on installation. The old skin may be used for a pattern, or if it is damaged, ask the factory to provide a hole finder. Use a .471 diameter hole saw to drill the side skins to match the receptacles. These hole saws have a No. 30 pilot. </p>
