--- a/html/Maintenance/Oil Requirements.html
+++ b/html/Maintenance/Oil Requirements.html
@@ -4,17 +4,17 @@
 
 <p>Checking the oil should always be done within 10 minutes of shut down. Unlike other Pratts, this one does not require filling before checking. The reason for checking the level right after shutdown is that it does not allow the oil time to escape to other areas of the engine. Sometimes bad seals allow the oil to leak back into cavities inside the engine giving you a false indication on the dipstick. Once the engine starts turning, the scavenger pump picks up the oil and returns it to the oil tank. </p>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>CAUTION</p>
-    <p class=”boxCautionLargeText”>Insure the oil dipstick is properly secured after checking oil level. A loose dipstick can allow most of the oil to be lost overboard within a short amount of time.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">CAUTION</p>
+    <p class="boxCautionLargeText">Insure the oil dipstick is properly secured after checking oil level. A loose dipstick can allow most of the oil to be lost overboard within a short amount of time.</p>
 </div>
 
 <p>Oil used at the factory is Eastman/Exxon/BP 2380 Turbo Oil, Mobil Jet Oil II or AeroShell Turbine Oil 560.  The oil brand and type will be marked on the oil access door at the time of delivery from the factory.  If a different brand is used, the engine and lines should be drained and a flushing procedure with the new oil should be carried out in accordance with the Pratt & Whitney PT6A Maintenance Manual. Also see Flight Manual. </p>
 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>NOTE</p>
-    <p class=”boxCautionLargeText”>For all PT6A-65 series eingines installed on the AT-802 aircraft, when performing motoring compressor runs of the engine such as for a compressor wash and/or a turbine wash, the main oil pressure pump can supply more oil to the engine than the oil scavenge pumps can return to the main oil tank.</p>
-    <p class=”boxCautionLargeText”>This can lead to engine oil failing the AGB (Accessory Gear Box) to a level high enough for the oil to drain overboard via the high-pressure fuel-pump drain.</p>
-    <p class=”boxCautionLargeText”>This should not be a cause for concern; once the engine is started and run at idle for several moments, the oil in the AGB will be scavenged back into the oil tank. After the engine is shut down, the oil level should be checked within 10 minutes and the oil level restored to its normal range.</p>
-    <p class=”boxCautionLargeText”>This situation will not have any effect on normal engine operation.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">NOTE</p>
+    <p class="boxCautionLargeText">For all PT6A-65 series eingines installed on the AT-802 aircraft, when performing motoring compressor runs of the engine such as for a compressor wash and/or a turbine wash, the main oil pressure pump can supply more oil to the engine than the oil scavenge pumps can return to the main oil tank.</p>
+    <p class="boxCautionLargeText">This can lead to engine oil failing the AGB (Accessory Gear Box) to a level high enough for the oil to drain overboard via the high-pressure fuel-pump drain.</p>
+    <p class="boxCautionLargeText">This should not be a cause for concern; once the engine is started and run at idle for several moments, the oil in the AGB will be scavenged back into the oil tank. After the engine is shut down, the oil level should be checked within 10 minutes and the oil level restored to its normal range.</p>
+    <p class="boxCautionLargeText">This situation will not have any effect on normal engine operation.</p>
 </div>
