--- a/html/Maintenance/Parking Brake.html
+++ b/html/Maintenance/Parking Brake.html
@@ -2,7 +2,7 @@
 
 <p>Leaking of brake fluid from the top of the valve body indicates failure to the O-rings that seals the valve stem.  O-ring replacement may be performed by removing the defective valve body only.  O-ring replacement may be done using the following steps: </p>
 
-<ol type=”1”>
+<ol type="1">
     <li>Clamp the fluid-supply line for the brake reservoir to the master cylinder. </li>
 
     <li>Remove the long AN3 bolts and nuts that clamp the valve bodies together. </li>
@@ -30,6 +30,6 @@
 
 <p>Blow the bore clean with compressed air, then coat the bore with MIL-H-5606 brake fluid. Do not use any other solvents to clean the bore. </p>
 
-<p>Coat the replacement O-ring with MIL-H-5606 brake fluid and slide into position in the annular groove in the valve-stem housing. All parts to be reassembled should be coated with fluid before assembly. The remainder of the replacement can be done by working backwards from Step 11 of the removal procedure. The rivet that was destroyed in Step 7 above can be replaced with Scott part number 18286 or other suitable 3/32” x 5/8” R.H. steel rivet. </p>
+<p>Coat the replacement O-ring with MIL-H-5606 brake fluid and slide into position in the annular groove in the valve-stem housing. All parts to be reassembled should be coated with fluid before assembly. The remainder of the replacement can be done by working backwards from Step 11 of the removal procedure. The rivet that was destroyed in Step 7 above can be replaced with Scott part number 18286 or other suitable 3/32" x 5/8" R.H. steel rivet. </p>
 
 <p>After the parking-brake valve is returned to the airplane and hoses are reconnected, the brakes must be bled as described in BRAKE BLEEDING in Section 2 of this manual. </p>
