--- a/html/Maintenance/STATIC SYSTEM.html
+++ b/html/Maintenance/STATIC SYSTEM.html
@@ -5,4 +5,4 @@
     <p class=‘boxCautionLargeText’>Apply air pressure only to the line that leads to the pitot-static head. Do not apply air pressure to the line that leads to the instrument panel. Sensitive instruments may be damaged.</p>
 </div>
 
-<p>The static ports on the AT-802A are the low points of the system and are normally self-draining. There are “T” fittings on the rear face of the static port buttons. The downward-facing arm of the “T” fittings are plugged. These plugs must be removed to drain residual moisture in the static-system lines. </p>
+<p>The static ports on the AT-802A are the low points of the system and are normally self-draining. There are “T" fittings on the rear face of the static port buttons. The downward-facing arm of the “T" fittings are plugged. These plugs must be removed to drain residual moisture in the static-system lines. </p>
